--- a/src/app/shared/footer/footer-one/footer-one.component.html
+++ b/src/app/shared/footer/footer-one/footer-one.component.html
@@ -131,8 +131,8 @@
 								<li><i class="fa fa-map-marker"></i> 2406, Hardhyan Singh Marg, Block 37J, Nai Walan,
 									Karol Bagh, New
 									Delhi, Delhi 110005</li>
-								<li><i class="fa fa-phone"></i>Call Us: +91-98918-69911</li>
-								<li><i class="fa fa-envelope-o"></i>Email Us: <a>customercare@vikramcreations.com</a>
+								<li><i class="fa fa-phone"></i><a href="tel:+91-98918-69911">Call Us: +91-98918-69911</a> </li>
+								<li><i class="fa fa-envelope-o"></i>Email Us: <a href="mailto:customercare@vikramcreations.com">customercare@vikramcreations.com</a>
 								</li>
 								<!-- <li><i class="fa fa-fax"></i>Fax: 123456</li> -->
 							</ul>
