--- a/src/app/pages/account/login/login.component.html
+++ b/src/app/pages/account/login/login.component.html
@@ -24,11 +24,13 @@
                     <div class="input-group">
                         <input type="{{inputType}}" class="form-control" id="review" formControlName="password"
                             [ngClass]="{ 'is-invalid': f.password.errors }" maxlength="20" placeholder="Enter password">
-                        <!-- <div class="input-group-append frm-icon" (click)="hideShowPassword()">
-                            <span class="input-group-text">
+                        <div class="input-group-append frm-icon" (click)="hideShowPassword()">
+                            <span style="
+                            margin-top: 28px;
+                        ">
                                 <i class="{{class}}"></i>
                             </span>
-                        </div> -->
+                        </div>
                     </div>
                     <div *ngIf="submitted && f.password.errors" class="Customerror">
                         <div>Please enter Password
