--- a/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
+++ b/src/app/shop/product/sidebar/product-left-sidebar-with-set/product-left-sidebar-with-set.component.html
@@ -108,17 +108,23 @@
                                         {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.discount }}%
                                         off</span>
                                 </h4>
-
+                                <!-- 
                                 <h5>
                                     <span>Price per set</span>
                                     {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.salePrice | currency: productService.Currency?.currency:'symbol' }}
-                                </h5>
-                            </div>
-                            <div class="col-md-6">
+                                </h5> -->
                                 <h3>
                                     Price per piece:
-                                    {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.averagePrice | currency: productService.Currency?.currency:'symbol' }}
+                                    {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.averagePrice | currency:
+                                    productService.Currency?.currency:'symbol' }}
                                 </h3>
+                            </div>
+                            <div class="col-md-6">
+                                <!-- <h3>
+                                    Price per piece:
+                                    {{ productkart[0]?.productSizeSet[bigProductImageIndex]?.averagePrice | currency:
+                                    productService.Currency?.currency:'symbol' }}
+                                </h3> -->
                                 <span>
                                     Total Pieces in this set:
                                     <strong style="font-size: x-large;">
