--- a/src/app/shop/checkout/checkout.component.html
+++ b/src/app/shop/checkout/checkout.component.html
@@ -625,7 +625,7 @@
                                     <div class="form-group col-md-4 col-sm-4 col-xs-4">
                                         <div class="field-label">State <span style="color:red">*</span></div>
                                         <!-- <input type="text" name="state" [formControl]="checkoutForm.controls['state']" value="" placeholder="" autocomplete="off"> -->
-                                        <select name="country" [formControl]="checkoutForm.controls['state']">
+                                        <select name="country" [formControl]="checkoutForm.controls['state']" disabled>
                                             <option value="">Select State</option>
                                             <option value="Andhra Pradesh">Andhra Pradesh</option>
                                             <option value="Andaman and Nicobar Islands">Andaman and Nicobar Islands
