--- a/src/app/pages/account/dashboard/dashboard.component.html
+++ b/src/app/pages/account/dashboard/dashboard.component.html
@@ -116,7 +116,7 @@
                                 <div class="box">
                                     <div class="box-title">
                                         <h3>Delivery Address</h3>
-                                        <a href="javascript:void(0)" *ngIf="lstBillingAddress?.length<2"
+                                        <a href="javascript:void(0)" *ngIf="lstBillingAddress?.length<2 && LoggedInUser[0].isAgentCustomer==false"
                                             (click)="NewBillingAddress(templateBillingAddress)"><i
                                                 class="fa fa-plus"></i> &nbsp; Add New Delivery Address</a>
                                     </div>
