--- a/src/app/pages/account/dashboard/dashboard.component.html
+++ b/src/app/pages/account/dashboard/dashboard.component.html
@@ -167,7 +167,7 @@
                                 </div>
                                 <div class="order-parts">
                                     <span>Order Placed</span>
-                                    <span>{{lst.orderDate | date :'MM/dd/yyyy HH:mm:ss'}}</span>
+                                    <span>{{lst.orderDate | date :'dd/MM/yyyy HH:mm:ss'}}</span>
                                 </div>
                                 <div class="order-parts">
                                     <span>Total</span>
