--- a/src/app/shop/compare/compare.component.html
+++ b/src/app/shop/compare/compare.component.html
@@ -54,6 +54,8 @@
                                         </div>
                                         <form class="variants clearfix">
                                             <button title="Add to Cart" (click)="addToCart(productkart)" class="add-to-cart btn btn-solid">Add to Cart</button>
+                                            &nbsp;
+                                            <a [routerLink]="['/shop/collection/left/sidebar']" class="add-to-cart btn btn-solid">continue shopping</a>
                                         </form>
                                     </td>
                                 </tr>
