--- a/src/app/shop/wishlist/wishlist.component.html
+++ b/src/app/shop/wishlist/wishlist.component.html
@@ -6,6 +6,10 @@
             <img src="assets/images/empty-wishlist.png" alt="Empty cart" title="Emprt cart">
             <h3 class="mt-4"><b>Shortlist is Empty</b></h3>
             <h4>Explore more shortlist some items.</h4>
+            <div class="text-center">
+                <a [routerLink]="['/shop/collection/left/sidebar']" class="btn btn-solid">continue
+                    shopping</a>
+            </div>
         </div>
         <div class="row" *ngIf='products.length'>
             <div class="col-sm-12">
